change the link

--- a/index.html
+++ b/index.html
@@ -92,20 +92,43 @@
             <div class="publication-links">
               <span class="link-block">
                 <a 
-                   class="external-link button is-normal is-rounded is-dark">
+                   class="external-link button is-normal is-rounded is-dark"
+                   href="https://arxiv.org/abs/2406.09196"
+                   >
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>Paper</span>
+                  <span>Arxiv</span>
                 </a>
               </span>
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
+                  </a>
+              </span> -->
+              <span class="link-block">
+                <a
+                   class="external-link button is-normal is-rounded is-dark"
+                   href="https://openaccess.thecvf.com/content/CVPR2024/papers/Fan_Adaptive_Slot_Attention_Object_Discovery_with_Dynamic_Slot_Number_CVPR_2024_paper.pdf">
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Main Paper</span>
+                  </a>
+              </span>
+              <span class="link-block">
+                <a
+                   class="external-link button is-normal is-rounded is-dark"
+                   href="https://openaccess.thecvf.com/content/CVPR2024/supplemental/Fan_Adaptive_Slot_Attention_CVPR_2024_supplemental.pdf"
+                   >
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Appendix</span>
                   </a>
               </span>
             </div>
@@ -157,6 +180,23 @@
         <p>Comparision between our model and fixed-slot models</p>
       </center>
     </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Remarks</h2>
+        <div class="content has-text-justified">
+          <p>
+            The code is currently undergoing open-source review and will be available shortly, most likely in early August.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Abstract. -->
   </div>
 </section>
 
