--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <h2 class="title is-3">Remarks</h2>
         <div class="content has-text-justified">
           <p>
-            The code is currently undergoing open-source review and will be available shortly, most likely in early August.
+            The code is currently undergoing open-source review and will be available soon, most likely in early August.
           </p>
         </div>
       </div>
