--- a/index.html
+++ b/index.html
@@ -131,6 +131,18 @@
                   <span>Appendix</span>
                   </a>
               </span>
+              <span class="link-block">
+                <a
+                   class="external-link button is-normal is-rounded is-dark"
+                   href="https://github.com/amazon-science/AdaSlot"
+                   >
+                  <span class="icon">
+                      <i class="fab fa-github"></i>
+                  </span>
+                  <span>Code</span>
+                  </a>
+              </span>
+              
             </div>
           </div>
         </div>
@@ -183,9 +195,8 @@
   </div>
 </section>
 
-<section class="section">
+<!-- <section class="section">
   <div class="container is-max-desktop">
-    <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Remarks</h2>
@@ -196,18 +207,17 @@
         </div>
       </div>
     </div>
-    <!--/ Abstract. -->
   </div>
-</section>
+</section> -->
 
 <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
-         href="">
+         href="https://arxiv.org/abs/2406.09196">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="" class="external-link" disabled>
+      <a class="icon-link" href="https://kfan21.github.io/" class="external-link" disabled>
         <i class="fab fa-github"></i>
       </a>
     </div>
